--- a/assets/stylesheet/stylesheet.css
+++ b/assets/stylesheet/stylesheet.css
@@ -77,6 +77,7 @@
 
 .new-posts .new-post img {
   width: 300px;
+  height: 160px;
 }
 
 .new-posts .new-post h2 {
@@ -189,6 +190,10 @@ a {
   margin: 0;
   margin-top: 10px;
   color: #000;
+}
+
+.study-post img {
+  height: 160px;
 }
 
 /* -------home.html/footer-area------- */
