--- a/assets/stylesheet/stylesheet.css
+++ b/assets/stylesheet/stylesheet.css
@@ -1,212 +1,102 @@
-/* -------home.html/.header------- */
-
-.header-area {
-  display: flex;
-}
-
-/* -------home.html/.header/.menu------- */
-
-.header-area .menu {
-  margin: 50px 30px 0 20px;
-}
-
-.header-area .menu img {
-  width: 40px;
-  height: auto;
-}
-
-/* -------home.html/.header/.border------- */
-
-.header-area .border {
-  margin: 70px auto 0 20px;
-  border-top: 3px solid rgb(189, 189, 189);
-  width: 2100px;
-  height: 0;
-  padding: 10px 0 0 20px;
-}
-
-.header-area .border h1 {
-  margin: 0;
-  white-space: nowrap;
-}
-
-/* ------home.html/.name------ */
-
-.header-area .name {
-  margin-left: auto;
-  margin-right: 15px;
-}
-
-.header-area .name h1 {
-  font-size: 50px;
-  margin-bottom: 0;
-  padding-left: 20px;
-  padding-right: 10px;
-}
-
-.header-area .name h2 {
-  font-size: 25px;
-  margin: 0 0;
-  padding-left: 85px;
-  padding-right: 40px;
-}
-
-/* -------home.html/.new-posts-and-profile------- */
-
-.new-posts-and-profile-area {
-  display: flex;
-}
-
-/* -------home.html/.new_posts------ */
-
-.new-posts {
+.main {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
 
-/* -------home.html/.new_posts------- */
-
-.new-posts .new-post {
+.main img {
   display: inline-block;
-  width: 300px;
-  height: 230px;
-  border: 2px solid #E2E2E2;
-  margin-left: 10px;
-  margin-right: 10px;
-  margin: 0 10px 10px 10px;
+  margin-top: 20px;
 }
 
-.new-posts .new-post img {
+.text-profile {
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 20px;
+  margin-left: 25px;
   width: 300px;
-  height: 160px;
+  height: 250px;
 }
 
-.new-posts .new-post h2 {
-  margin-top: 10px;
-  color: #000;
+.text-profile h3 {
+  color: rgb(110, 110, 110);
+  text-align: left;
+  margin: 10px 10px 10px 20px;
+}
+
+.text-profile p {
+  color: rgb(110, 110, 110);
+  text-align: left;
+  margin: 10px 10px 10px 20px;
+}
+
+.text-profile img {
+  width: 20px;
+  margin: 10px 30px 0 0;
+}
+
+main {
+  text-align: center;
+}
+
+header {
+  margin-top: 50px;
+  text-align: center;
+} 
+
+header p {
+  margin-top: 30px;
+}
+
+.lessons a {
+  margin: 0 20px;
 }
 
 a {
-  text-decoration: none;
+  color: #ff3c00;
 }
 
-.profile {
-  display: inline-block;
-  margin-top: 7px;
-  margin-left: auto;
-  margin-right: 20px;
+.hr {
+  background-color: #ff3c00;
+  border: none;
+  width: 500px;
+  height: 1px;
 }
 
-.profile img {
-  width: 130px;
-  height: auto;
-  padding-top: 20px;
-  padding-left: 105px;
+hr {
+  width: 70%;
 }
 
-.profile h1 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 25px;
-  margin: 0 0 0 127px;
-}
-
-.profile h2 {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 15px;
-  margin: 0 40px 0 111px;
-}
-
-.profile .border {
-  border-bottom: 2px solid #A7A7A7;
-  margin: 3px 40px 0 96px;
-  width: 150px;
-}
-
-.university {
-  font-family: Arial;
-  font-size: 19px;
-  margin: 0 40px 0 95px;
-  white-space: nowrap;
-}
-
-.faculty {
-  font-family: Arial;
-  font-size: 20px;
-  margin: 0 40px 0 107px;
-  white-space: nowrap;
-}
-
-/* -------home.html/footer-area------- */
-
-.footer-area {
-  margin: 140px 30px 5px 20px;
-}
-
-.footer-area .footer {
-  display: flex;
-}
-
-.footer .border {
-  border-bottom: 3px solid #A7A7A7;
-  width: 100%;
-  height: 0;
-  margin-top: 12px;
-}
-
-.footer h3 {
-  margin: 1px 10px 3px 10px;
-  white-space: nowrap;
-  font-size: 15px;
-}
-
-/* -------items/menu.html------- */
-
-.menu h1 {
-  margin-top: 50px;
-  text-align: center;
-}
-
-/* -------items/posts------- */
-
-.post .border {
-  border-bottom: 3px solid gray;
-}
-
-.post1_body {
-  background: rgb(209, 209, 209);
-}
-
-.post1_header {
-  background: white;
-  margin: 0 100px  0 100px;
-}
-
-.post1_header h1 {
-  text-align: center;
-}
-
-.post1_main {
+.contents {
   display: block;
   text-align: center;
-  margin: 0 100px 0 100px;
-  padding: 20px 20px;
-  background: white;
+  margin: 0 auto;
+  width: 50%;
 }
 
-.post1_main h2 {
-  margin-bottom: 0;
-}
-
-.post1_main div p {
+.contents ul {
   display: inline-block;
+  list-style: none;
+  padding-left: 0;
+}
+
+li {
   text-align: left;
 }
 
-.post1_main div img {
-  display: inline-block;
-  text-align: center;
-  height: 300px;
-  width: 500px;
+.contents ul li {
+  text-align: left;
+  margin-bottom: 5px;
 }
+
+footer {
+  text-align: center;
+}
+
+p, a, h1, h2, h3 {
+  text-align: center;
+  font-family: "Interstate",
+  "Lucida Grande","Lucida Sans Unicode",
+  "Lucida Sans",Garuda,Verdana,Tahoma,
+  sans-serif;
+}
+
 
