--- a/assets/stylesheet/stylesheet.css
+++ b/assets/stylesheet/stylesheet.css
@@ -1,5 +1,24 @@
+header {
+  margin: 25px 100px 0 100px;
+  text-align: center;
+}
+
+.lessons p {
+  display: inline-block;
+  margin: 25px 20px 0 20px;
+}
+
+header a {
+  font-size: 25px;
+}
+
+header p {
+  font-size: 25px;
+}
+
 .main {
   display: block;
+  margin: 0 100px;
 }
 
 .main img {
@@ -10,44 +29,32 @@
 .text-profile {
   display: inline-block;
   vertical-align: top;
-  margin-top: 20px;
-  margin-left: 25px;
-  width: 300px;
-  height: 250px;
+  margin: 20px 0 0 25px;
+  width: 400px;
+  height: 400px;
 }
 
 .text-profile h3 {
+  font-size: 30px;
   color: rgb(110, 110, 110);
   text-align: left;
   margin: 10px 10px 10px 20px;
 }
 
 .text-profile p {
+  font-size: 25px;
   color: rgb(110, 110, 110);
   text-align: left;
-  margin: 10px 10px 10px 20px;
+  margin: 20px 10px 10px 20px;
 }
 
 .text-profile img {
-  width: 20px;
+  width: 25px;
   margin: 10px 30px 0 0;
 }
 
 main {
   text-align: center;
-}
-
-header {
-  margin-top: 50px;
-  text-align: center;
-} 
-
-header p {
-  margin-top: 30px;
-}
-
-.lessons a {
-  margin: 0 20px;
 }
 
 a {
@@ -79,6 +86,7 @@ hr {
 }
 
 li {
+  font-size: 20px;
   text-align: left;
 }
 
@@ -91,12 +99,14 @@ footer {
   text-align: center;
 }
 
-p, a, h1, h2, h3 {
+footer a {
+  font-size: 20px;
+}
+
+p, a, h1, h2, h3, li {
   text-align: center;
   font-family: "Interstate",
   "Lucida Grande","Lucida Sans Unicode",
   "Lucida Sans",Garuda,Verdana,Tahoma,
   sans-serif;
 }
-
-
