--- a/assets/stylesheet/stylesheet.css
+++ b/assets/stylesheet/stylesheet.css
@@ -1,24 +1,23 @@
-header {
-  margin: 25px 100px 0 100px;
+p, a, h1, h2, h3, li {
+  text-align: center;
+  font-family: "Interstate",
+  "Lucida Grande","Lucida Sans Unicode",
+  "Lucida Sans",Garuda,Verdana,Tahoma,
+  sans-serif;
+}
+
+.lessons {
   text-align: center;
 }
 
 .lessons p {
   display: inline-block;
-  margin: 25px 20px 0 20px;
-}
-
-header a {
-  font-size: 25px;
-}
-
-header p {
-  font-size: 25px;
+  margin: 25px 25px 0 20px;
+  font-size: 20px;
 }
 
 .main {
-  display: block;
-  margin: 0 100px;
+  text-align: center;
 }
 
 .main img {
@@ -51,10 +50,6 @@ header p {
 .text-profile img {
   width: 25px;
   margin: 10px 30px 0 0;
-}
-
-main {
-  text-align: center;
 }
 
 a {
@@ -95,18 +90,17 @@ li {
   margin-bottom: 5px;
 }
 
-footer {
-  text-align: center;
+@media screen and (max-width: 1000px) {
+
+  .lessons {
+    margin: 0 auto;
+    width: 600px;
+  }
+
+  .main {
+    margin: 0 auto;
+    width: 600px;
+  }
+
 }
 
-footer a {
-  font-size: 20px;
-}
-
-p, a, h1, h2, h3, li {
-  text-align: center;
-  font-family: "Interstate",
-  "Lucida Grande","Lucida Sans Unicode",
-  "Lucida Sans",Garuda,Verdana,Tahoma,
-  sans-serif;
-}
