--- a/assets/stylesheet/stylesheet.css
+++ b/assets/stylesheet/stylesheet.css
@@ -104,6 +104,12 @@ li {
   margin-bottom: 5px;
 }
 
+.footer-name {
+  margin: 10px 50px 0 0;
+  font-size: 15px;
+  color: #d8d8d8;
+}
+
 footer {
   font-size: 20px;
   text-align: center;
@@ -131,13 +137,12 @@ footer {
   }
 
   .profile-image {
-    margin-bottom: 20px;
     width: 300px;
     height: auto;
   }
 
   .text-profile {
-    margin: 0;
+    margin: 50px 0 0;
     width: 300px;
     height: 300px;
   }
